WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65191
[EFL] Do not crash on the isSlider() assert.
https://bugs.webkit.org/show_bug.cgi?id=65191
Summary
[EFL] Do not crash on the isSlider() assert.
Raphael Kubo da Costa (:rakuco)
Reported
2011-07-26 10:48:41 PDT
[EFL] Do not crash on the isSlider() assert.
Attachments
Patch
(1.97 KB, patch)
2011-07-26 10:50 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-07-26 10:50:34 PDT
Created
attachment 102022
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2011-07-26 10:52:44 PDT
CC'ing tonikitoo in hopes that this one-liner makes it into the tree.
WebKit Review Bot
Comment 3
2011-07-26 12:03:31 PDT
Comment on
attachment 102022
[details]
Patch Clearing flags on attachment: 102022 Committed
r91769
: <
http://trac.webkit.org/changeset/91769
>
WebKit Review Bot
Comment 4
2011-07-26 12:03:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug